# WeThePeople

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: auth.py  database.py  models.py  schemas.py
app/routers/: posts.py  users.py
static/css/: main.css  style.css
templates/: admin.html  edit.html  home.html  index.html  layout.html  login.html  post.html  register.html
